--- a/assignments/assignment1/KNN.ipynb
+++ b/assignments/assignment1/KNN.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,16 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21.5 ms ± 1.45 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "35.6 ms ± 4.35 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "36.3 ms ± 454 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "19.1 ms ± 1.91 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "34.8 ms ± 7.74 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "36.3 ms ± 4.49 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -299,9 +299,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k = 1, f1 = 0.682784\n",
+      "k = 2, f1 = 0.523135\n",
+      "k = 3, f1 = 0.686164\n",
+      "k = 5, f1 = 0.607829\n",
+      "k = 8, f1 = 0.580787\n",
+      "k = 10, f1 = 0.590111\n",
+      "k = 15, f1 = 0.633256\n",
+      "k = 20, f1 = 0.646145\n",
+      "k = 25, f1 = 0.654244\n",
+      "k = 50, f1 = 0.590485\n"
+     ]
+    }
+   ],
    "source": [
     "# Find the best k using cross-validation based on F1 score\n",
     "num_folds = 5\n",
@@ -309,6 +326,13 @@
     "train_folds_y = []\n",
     "\n",
     "# TODO: split the training data in 5 folds and store them in train_folds_X/train_folds_y\n",
+    "indices = np.arange(binary_train_X.shape[0])\n",
+    "fold_indices = np.array_split(indices, num_folds)\n",
+    "\n",
+    "for idxs in fold_indices:\n",
+    "    train_folds_X.append(binary_train_X[idxs])\n",
+    "    train_folds_y.append(binary_train_y[idxs])\n",
+    "\n",
     "\n",
     "k_choices = [1, 2, 3, 5, 8, 10, 15, 20, 25, 50]\n",
     "k_to_f1 = {}  # dict mapping k values to mean F1 scores (int -> float)\n",
@@ -318,11 +342,24 @@
     "    # Go through every fold and use it for testing and all other folds for training\n",
     "    # Perform training and produce F1 score metric on the validation dataset\n",
     "    # Average F1 from all the folds and write it into k_to_f1\n",
+    "    scores = np.zeros(num_folds)\n",
+    "    for fold in range(num_folds):\n",
+    "        folded_valid_X = np.array(train_folds_X[fold])\n",
+    "        folded_valid_y = np.array(train_folds_y[fold])\n",
+    "        #train = before FOLD + after FOLD\n",
+    "        folded_train_X = np.vstack(train_folds_X[0:fold] + train_folds_X[fold+1:num_folds])\n",
+    "        folded_train_y = np.hstack(train_folds_y[0:fold] + train_folds_y[fold+1:num_folds])\n",
+    "        \n",
+    "        knn_classifier = KNN(k=k)\n",
+    "        knn_classifier.fit(folded_train_X, folded_train_y)\n",
+    "        prediction = knn_classifier.predict(folded_valid_X)\n",
+    "    \n",
+    "        _, _, scores[fold], _ = binary_classification_metrics(prediction, folded_valid_y)\n",
+    "    k_to_f1[k] = scores.mean()\n",
     "\n",
-    "    pass\n",
-    "\n",
-    "for k in sorted(k_to_f1):\n",
-    "    print('k = %d, f1 = %f' % (k, k_to_f1[k]))"
+    "for k in k_to_f1:\n",
+    "    print('k = %d, f1 = %f' % (k, k_to_f1[k]))\n",
+    "    "
    ]
   },
   {
@@ -334,12 +371,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best KNN with k = 3\n",
+      "Accuracy: 0.56, Precision: 0.73, Recall: 0.67, F1: 0.70\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO Set the best k to the best value found by cross-validation\n",
-    "best_k = 1\n",
+    "best_k = 3\n",
     "\n",
     "best_knn_classifier = KNN(k=best_k)\n",
     "best_knn_classifier.fit(binary_train_X, binary_train_y)\n",
@@ -361,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,9 +431,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.21\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Implement multiclass_accuracy\n",
     "accuracy = multiclass_accuracy(predict, test_y)\n",
@@ -403,9 +457,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k = 1, accuracy = 0.635333\n",
+      "k = 2, accuracy = 0.561333\n",
+      "k = 3, accuracy = 0.618667\n",
+      "k = 5, accuracy = 0.512000\n",
+      "k = 8, accuracy = 0.494667\n",
+      "k = 10, accuracy = 0.495333\n",
+      "k = 15, accuracy = 0.511333\n",
+      "k = 20, accuracy = 0.527667\n",
+      "k = 25, accuracy = 0.519333\n",
+      "k = 50, accuracy = 0.486667\n"
+     ]
+    }
+   ],
    "source": [
     "# Find the best k using cross-validation based on accuracy\n",
     "num_folds = 5\n",
@@ -413,6 +484,12 @@
     "train_folds_y = []\n",
     "\n",
     "# TODO: split the training data in 5 folds and store them in train_folds_X/train_folds_y\n",
+    "indices = np.arange(binary_train_X.shape[0])\n",
+    "fold_indices = np.array_split(indices, num_folds)\n",
+    "\n",
+    "for idxs in fold_indices:\n",
+    "    train_folds_X.append(binary_train_X[idxs])\n",
+    "    train_folds_y.append(binary_train_y[idxs])\n",
     "\n",
     "k_choices = [1, 2, 3, 5, 8, 10, 15, 20, 25, 50]\n",
     "k_to_accuracy = {}\n",
@@ -422,8 +499,21 @@
     "    # Go through every fold and use it for testing and all other folds for validation\n",
     "    # Perform training and produce accuracy metric on the validation dataset\n",
     "    # Average accuracy from all the folds and write it into k_to_accuracy\n",
-    "    pass\n",
-    "\n",
+    "    \n",
+    "    scores = np.zeros(num_folds)\n",
+    "    for fold in range(num_folds):\n",
+    "        folded_valid_X = np.array(train_folds_X[fold])\n",
+    "        folded_valid_y = np.array(train_folds_y[fold])\n",
+    "        #train = before FOLD + after FOLD\n",
+    "        folded_train_X = np.vstack(train_folds_X[0:fold] + train_folds_X[fold+1:num_folds])\n",
+    "        folded_train_y = np.hstack(train_folds_y[0:fold] + train_folds_y[fold+1:num_folds])\n",
+    "        \n",
+    "        knn_classifier = KNN(k=k)\n",
+    "        knn_classifier.fit(folded_train_X, folded_train_y)\n",
+    "        prediction = knn_classifier.predict(folded_valid_X)\n",
+    "        scores[fold] = multiclass_accuracy(prediction, folded_valid_y)\n",
+    "    k_to_accuracy[k] = scores.mean()\n",
+    "    \n",
     "for k in sorted(k_to_accuracy):\n",
     "    print('k = %d, accuracy = %f' % (k, k_to_accuracy[k]))"
    ]
@@ -439,9 +529,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.23\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO Set the best k as a best from computed\n",
+    "best_k = 3\n",
+    "\n",
+    "best_knn_classifier = KNN(k=best_k)\n",
+    "best_knn_classifier.fit(train_X, train_y)\n",
+    "prediction = best_knn_classifier.predict(test_X)\n",
+    "\n",
+    "# Accuracy should be around 20%!\n",
+    "accuracy = multiclass_accuracy(prediction, test_y)\n",
+    "print(\"Accuracy: %4.2f\" % accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.21\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO Set the best k as a best from computed\n",
     "best_k = 1\n",
@@ -482,58 +606,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_X.shape?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.shape?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.sum?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.isclose?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.bincount?"
-   ]
   },
   {
    "cell_type": "code",
