Assignment 1 is done

--- a/assignments/assignment1/KNN.ipynb
+++ b/assignments/assignment1/KNN.ipynb
@@ -184,12 +184,7 @@
     "# TODO: implement compute_distances_one_loop in knn.py\n",
     "\n",
     "dists = knn_classifier.compute_distances_one_loop(binary_test_X)\n",
-    "assert np.isclose(dists[0, 10], np.sum(np.abs(binary_test_X[0] - binary_train_X[10])))\n",
-    "\n",
-    "#print(dists.shape)\n",
-    "#print(np.sum(np.abs(binary_test_X[0] - binary_train_X[10])))\n",
-    "#print('test size', binary_test_X.shape)\n",
-    "#print('test size', binary_train_X.shape)"
+    "assert np.isclose(dists[0, 10], np.sum(np.abs(binary_test_X[0] - binary_train_X[10])))"
    ]
   },
   {
